[package]
name = "ln-node"
version = "0.1.0"
edition = "2024"

[dependencies]
bdk_bitcoind_rpc = "0.21.0"
bdk_wallet = { version = "2.0.0", features = ["rusqlite"] }
bip39 = "2.2.0"
bitcoin = "0.32.6"
chrono = "0.4.41"
env_logger = "0.11.8"
lightning = "0.2"
lightning-background-processor = { version = "0.2.0" }
lightning-block-sync = { version = "0.2", features = ["rpc-client", "tokio"] }
lightning-macros = "0.2.0"
lightning-net-tokio = "0.2.0"
lightning-persister = { version = "0.2.0", features = ["tokio"] }
log = "0.4.27"
rand = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
hex = "0.4.3"
tokio = { version = "1.46.1", features = ["full", "net", "signal"] }
base64 = "0.22.1"
home = "0.5.11"
clap = { version = "4.5.45", features = ["derive"] }
tokio-util = "0.7.16"
serde_bytes = "0.11.19"
